client/src/app/deck/deck.module.scss
.filterGroup {
	background: var(--gray-500);
	padding: 0.5rem;
	display: flex;
	align-items: center;
	flex-wrap: wrap;
	gap: 0.5rem;
	margin-bottom: 1rem;
}

.validationMessage {
	position: sticky;
	min-height: 35px;
	top: 0;
	display: flex;
	justify-content: center;
	align-items: center;
	padding: 0.5rem;
	margin-bottom: 0.5rem;
	border: 2px solid var(--color-error-highlight);
	background: var(--color-error);
	color: var(--text-light);
	filter: drop-shadow(2px 2px 0 rgba(0, 0, 0, 35%))
		drop-shadow(0 2px 10px rgba(0, 0, 0, 50%));
	z-index: 11;
}

.cardCount {
	display: flex;
	flex-direction: row;
	flex-shrink: 0;
	gap: 0.25rem;
	font-weight: 600;
	letter-spacing: 1px;
	text-align: center;
	line-height: 100%;
	background: var(--gray-600);
	padding: 0.5rem 0.75rem;
	border-radius: 6px;
	font-family: Minecraft, Unifont;
}

.cardCount span {
	font-size: 0.8rem;
	font-weight: 100;
	letter-spacing: 0;
}

.deckName {
	font-weight: 700;
	font-size: 1.2rem;
	text-overflow: ellipsis;
	flex-shrink: 3;
	overflow: hidden;

	span {
		min-width: 2px;
		text-overflow: ellipsis;
		white-space: nowrap;
	}
}

.myDecksItem {
	display: flex;
	align-items: center;
	gap: 0.5rem;
	padding: 0.5rem;
	user-select: none;

	&:hover {
		cursor: pointer;
		background: #48494a;
		box-shadow: inset 0 -2px #5a5b5c, inset 0 2px #2b2c2c;
	}
}

.selectedDeck {
	font-size: 1rem;
	color: gold;
	text-indent: 3px;
	background: linear-gradient(
		to right,
		rgba(var(--color-700), 0),
		rgba(var(--color-900), 0.4)
	);
	transition: all 0.25s ease-in-out;
}

.newDeckButton {
	font-family: Minecrafter;
	flex-shrink: 0;
	display: flex;
	align-items: center;
	justify-content: center;
	background: var(--color-primary);
	height: 2.75rem;
	padding: 0 0.5rem;
	padding-bottom: 0.25rem;
	box-shadow: inset 0 -4px 1px var(--color-primary-shadow),
		inset 1px 1px 0 1px var(--color-primary-highlight),
		inset -1px -5px 0 1px var(--color-primary-highlight);
	border: 1.5px solid black;
	cursor: pointer;
	user-select: none;

	&:hover {
		background: #639d52;
	}

	&:active {
		transform: translateY(1px);
	}

	> p {
		font-size: 1rem;
		filter: var(--text-shadow);
		letter-spacing: 0.5px;
	}
}

.caret {
	height: 1rem;
	width: 1rem;
}

.splitButton {
	display: flex;
	margin: 0.5rem;

	.newDeckButton {
		box-shadow: none;
	}

	.newDeckButton:first-child {
		border-right: 0;
		box-shadow: inset 0 -4px 0 0 var(--color-primary-shadow),
			inset 2px 2px 0 0 var(--color-primary-highlight),
			inset 0 -6px 0 0 var(--color-primary-highlight);
		flex-grow: 1;
	}

	.newDeckButton:last-child {
		border-left: 0;
		min-width: 1.5rem;
		box-shadow: inset 0 -4px 0 0 var(--color-primary-shadow),
			inset 0 2px 0 0 var(--color-primary-highlight),
			inset 0 -6px 0 0 var(--color-primary-highlight),
			inset -2px 0 0 0 var(--color-primary-highlight);
	}

	.caret {
		all: unset;
		color: white;
		height: 1rem;
		width: 1rem;
		filter: brightness(5);
	}
}

.deckImage {
	display: grid;
	place-content: center;
	background-color: var(--gray-500);
	border-radius: 6px;
	width: 2rem;
	height: 2rem;
	flex-shrink: 0;

	> img {
		height: 1.5rem;
		filter: drop-shadow(2px 2px 0 rgba(0, 0, 0, 25%));
	}
}

.usesIcon {
	&.farm {
		background-color: rgb(124, 204, 12);
	}

	&.redstone {
		background-color: rgb(185, 33, 42);
	}

	&.prankster {
		background-color: rgb(116, 55, 168);
	}

	&.explorer {
		background-color: rgb(103, 138, 190);
	}

	&.balanced {
		background-color: rgb(101, 124, 50);
	}

	&.builder {
		background-color: rgb(184, 162, 154);
	}

	&.pvp {
		background-color: rgb(85, 202, 194);
	}

	&.speedrunner {
		background-color: rgb(223, 226, 36);
	}

	&.terraform {
		background-color: rgb(217, 119, 147);
	}

	&.miner {
		background-color: rgb(110, 105, 108);
	}
}

.dropdownButton {
	place-content: center;
	background-color: var(--gray-500);
	border-radius: 6px;
	width: 2rem;
	height: 2rem;
	flex-shrink: 0;
	cursor: pointer;

	> img {
		height: 1.5rem;
		filter: drop-shadow(2px 2px 0 rgba(0, 0, 0, 25%));
	}

	&:hover {
		background: var(--gray-600);
		filter: brightness(1.1);
	}
}

.privacySettings {
	color: var(--gray-200);
}

.button {
	margin: 0 1rem;
}

.sidebarButton {
	padding: 0.5rem;
	display: flex;
	justify-content: stretch;

	> * {
		flex-grow: 1;
	}
}

.cardCountGroup {
	margin-right: 1rem;
	background: var(--gray-500);
	padding: 0.25rem 0.75rem;
	border-radius: 6px;
}

.cardGroupHeader {
	position: relative;
	width: 100%;
}

.tokens {
	color: var(--ultra-rare);
}

.tokenHeader {
	position: absolute;
	right: 10px;
	font-size: 0.9rem;
	transform: translateY(2.5px);
}

.dynamicSpace {
	flex: 1 1 auto;
	width: 0;
}

.error {
	color: var(--color-error);
}

.errorMessage {
	padding-top: 0.25rem;
	display: none;
	font-size: 0.8rem;
}

.input {
	min-width: 100px;
	background: var(--gray-400);
	border: 2px solid var(--gray-900);
	color: white;
	height: 2.4rem;
	padding: 0.5rem;
	padding-bottom: 0.25rem;
	font-size: 0.8rem;

	&::placeholder {
		color: var(--gray-200);
	}

	&:invalid[data-focused="true"] ~ .errorMessage {
		display: inline;
		width: 100%;
		color: red;
	}
}

.deckDetails {
	display: flex;
	flex-direction: row;
	gap: 0.5rem;
}

.dark {
	background: var(--gray-700);
}

.upperEditDeck {
	display: flex;
	align-items: center;
	justify-content: space-between;
	padding-right: 5px;
}

.editDeckInfo {
	display: flex;
	flex-direction: column;
	gap: 0.5rem;
	padding: 0.5rem;
	margin-bottom: 0.5rem;
	width: 100%;

	// background: var(--gray-800);
	// border-bottom: 1px solid var(--gray-100);
	// border-radius: 0.5rem;
}

.editDeckInfoSettings {
	display: flex;
	gap: 0.5rem;
}

.inputValidationGroup {
	display: flex;
	flex-direction: column;
	flex-grow: 1;
	justify-content: stretch;
}

.headerGroup {
	display: flex;
	align-items: center;
	flex-flow: row nowrap;
	flex-grow: 1;
	width: 100%;
	gap: 0.5rem;
}

.editableDeckName:not(:focus) {
	&:invalid[data-focused="true"] ~ .errorMessage {
		display: block;
		width: 100%;
		color: red;
	}
}

.sidebarHeader {
	display: flex;
	flex-direction: row;
	align-items: center;
	gap: 0.5rem;
}

.sidebarFooter {
	flex-shrink: 0;
	display: flex;
	flex-direction: column;
	gap: 0.5rem;
}

.sidebarIcon {
	// position: absolute;
	left: 1rem;
	height: 2rem;
}

.clearFilters {
	border-radius: 0.5rem;
	height: 1.5rem;
	min-width: 1.5rem;
	padding: 0.4rem;
	display: inline-flex;
	align-items: center;
	justify-content: center;
	color: var(--text-light);
	background-color: var(--gray-900);
	border: 1px solid transparent;
	cursor: pointer;

	&:hover {
		background-color: var(--gray-400);
	}

	> img {
		height: 1.5rem;
		width: 1.5rem;
	}
}

.filters {
	display: flex;
	gap: 0.25rem;
	position: relative;
	z-index: 1;
}

/* DESKTOP */
@media (min-width: 720px) {
	.mobileDeckSelect {
		display: none;
	}

	.deckWrapper {
		flex-direction: row;
	}

	.myDecks {
		display: flex;
	}
}

.showOnMobile {
	display: none;
	visibility: hidden;
}

.mobileDeckPreview {
	display: none;
	visibility: hidden;
	overflow: hidden;
	width: 45%;
	background-color: var(--gray-700);
	height: 100%;
}

.mobileSelector {
	display: flex;
	flex-direction: column;
	height: 100%;
}

.mobileDeckStats {
	display: flex;
	flex-direction: row;
	justify-content: right;
	gap: 0.5rem;
	width: 40%;
	white-space: nowrap;
	flex-shrink: 0;
}

.mobileDeckName {
	background-color: var(--gray-600);
	border-bottom: 2px solid black;
	padding: 0.5rem;
	display: flex;
	align-items: center;
	gap: 0.5rem;
	flex-wrap: none;
	white-space: nowrap;
}

.mobileDeckNamePadding {
	flex-grow: 1;
}

.mobileDeckNameText {
	font-weight: 600;
	text-overflow: ellipsis;
	white-space: nowrap;
	overflow: hidden;
	flex-shrink: 0;
	max-width: 40%;

	&.invalid {
		filter: drop-shadow(1px 0px 0 var(--color-error))
			drop-shadow(-1px 0px 0 var(--color-error))
			drop-shadow(0px 1px 0 var(--color-error))
			drop-shadow(0px -1px 0 var(--color-error));
	}
}

.mobileDeckStat {
	background-color: var(--gray-400);
	border-radius: 6px;
	width: 100%;
	text-align: center;
	padding: 0.5rem 0.75rem;
	font-weight: 600;
	font-size: 14px;
}

.mobileErrorIcon {
	width: 5%;
	padding-left: 0.5rem;
}

.deckListContainer {
	flex-grow: 1;
}

.spacingItem {
	flex-grow: 1;
}

.deckTagsForm {
	display: flex;
	flex-direction: row;
	gap: 0.5rem;
}

.customInput {
	display: flex;
	flex-direction: row;
	gap: 1rem;
	align-items: center;
}

.tagList {
	display: flex;
	flex-direction: row;
	gap: 1rem;
}

.fullTagTitle {
	background-color: var(--gray-600);
	padding: 0.25rem;
	border-radius: 4px;
	border: var(--gray-600) 2px solid;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}

.fullTag {
	background-color: var(--gray-600);
	padding: 0.5rem;
	border-radius: 4px;
	border: var(--gray-600) 2px solid;

	&:hover {
		border: var(--text-light) 2px solid;
		background-color: #353838;
	}
}

.fullTagColor {
	border-radius: 50%;
	padding-right: 1rem;
	margin-right: 5px;
}

.tagBox {
	width: 1rem;
	height: 1rem;
	border-radius: 50%;
}

.multiColoredCircle {
	width: 0.5rem;
	height: 2rem;
	display: flex;
	flex-direction: column;
	gap: 4px;
}

.singleTag {
	flex-grow: 1;
	border-radius: 6px;
}

.submitButton {
	padding: 0.75rem;
}

.importAndExport {
	display: flex;
	width: 100%;
	gap: 0.5rem;
}

.footerTags {
	display: flex;
	flex-direction: row;
	align-items: center;
	gap: 0.5rem;
	flex-grow: 1;
}

.mobileTags {
	display: flex;
	flex-direction: row;
	padding: 0.5rem;
	background-color: var(--gray-500);
	border-top: solid 2px black;
}

.removeButton {
	flex-grow: 1;
}

/* MOBILE */
@media screen and (max-width: 720px) {
	.hideOnMobile {
		display: none;
		visibility: hidden;
	}

	.showOnMobile {
		display: inherit;
		visibility: visible;
	}

	.deckList {
		width: 100%;
		min-width: 100%;
		max-width: 100%;
		background-color: var(--gray-800);
		border-left: solid 2px black;
		height: 100%;
		overflow: scroll;
	}

	.mobileDeckPreview {
		display: inherit;
		visibility: visible;
	}

	.deckListBox {
		display: flex;
		flex-direction: row;
		flex-grow: 1;
		overflow: hidden;
	}

	.filterGroup {
		justify-content: center;
		gap: 0rem;
		margin-bottom: 0px;
		background: var(--gray-600);
	}

	.editDeckInfo {
		padding: 0px;
	}
}

.iconButton {
	border-radius: 0.5rem;
	height: 1.5rem;
	padding: 0.4rem;
	display: inline-flex;
	align-items: center;
	justify-content: center;
	color: var(--text-light);
	background-color: var(--gray-900);
	border: 1px solid transparent;

	&:hover {
		background-color: var(--gray-400);
	}

	> img {
		height: 1.5rem;
		width: 1.5rem;
	}
}

@media screen and (max-width: 720px) {
	.mobileDeckStat {
		padding: 0.2rem 0.2rem;
	}

	.mobileDeckName {
		flex-wrap: wrap;
	}

	.mobileDeckNameText {
		max-width: 80%;
	}

	.mobileDeckStats {
		width: 100%;
	}
}

@media (max-width: 440px) {
	.mobileDeckPreview {
		width: 30%;
	}
}

